// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keytip renders invisible Keytip correctly 1`] = `
<div
  className=

      {
        background-color: #201f1e;
        visibility: hidden;
      }
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background-color: #201f1e;
          color: #edebe9;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 17px;
          line-height: 17px;
          min-width: 11px;
          padding-left: 3px;
          padding-right: 3px;
          text-align: center;
        }
  >
    A
  </span>
</div>
`;

exports[`Keytip renders visible Keytip correctly 1`] = `
<div
  className=

      {
        background-color: #201f1e;
      }
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background-color: #201f1e;
          color: #edebe9;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 17px;
          line-height: 17px;
          min-width: 11px;
          padding-left: 3px;
          padding-right: 3px;
          text-align: center;
        }
  >
    A
  </span>
</div>
`;

exports[`Keytip renders visible disabled Keytip correctly 1`] = `
<div
  className=

      {
        background-color: #201f1e;
        opacity: 0.5;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
        color: GrayText;
        opacity: 1;
      }
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background-color: #201f1e;
          color: #c8c6c4;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 17px;
          line-height: 17px;
          min-width: 11px;
          padding-left: 3px;
          padding-right: 3px;
          text-align: center;
        }
  >
    A
  </span>
</div>
`;
